<resources>
    <string name="app_name">معهد الطلاب</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_TodayCollections">تحصيلات اليوم</string>
    <string name="menu_delayedListings">قوائم المتأخرات</string>
    <string name="menu_numOfStudents">أعداد الطلبة</string>
    <string name="menu_DataOfStudents">بيانات الطلبة</string>
    <string name="menu_tableOfClasses">جدول الحصص</string>
    <string name="title_activity_today_collection">TodayCollection</string>
    <string name="title_detailed">تفصيلى</string>
    <string name="title_total">إجمالى</string>
    <string name="title_complex">مجمع</string>
</resources>
